styles: fix resume on tablet

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,4 +1,4 @@
 $spacing-unit: 48px;
 $laptop: 1024px;
-$mobile-sm: 320px;
-$mobile-sm: 768px;
+$mobile-sm: 425px;
+$mobile-md: 768px;
