--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -160,4 +160,39 @@
 
 
   }
+
+    @media screen and (max-width: $mobile-md) {
+    .body {
+      padding: ($spacing-unit / 2) 0;
+      flex-direction: column-reverse;
+      gap: $spacing-unit / 2;
+
+    //   .job {
+    //     flex-direction: column;
+    //     gap: 0;
+    //     border-bottom: 1px solid rgba(34, 34, 34, 0.2);
+    //     margin-bottom: $spacing-unit / 2;
+    //   }
+
+    //   .education {
+    //     flex-direction: column;
+    //     gap: 0;
+
+    //     .schooling {
+    //       flex-direction: column;
+    //       gap: 0;
+    //     }
+    //   }
+    }
+
+    .col-right {
+      border-bottom: 1px solid rgba(34, 34, 34, 0.2);
+      display: flex;
+      flex-direction: row;
+      gap: $spacing-unit;
+    }
+
+
+  }
+
 }
