--- a/css/main.scss
+++ b/css/main.scss
@@ -108,3 +108,10 @@ a:hover {
     height: auto;
   }
 }
+
+@media screen and (max-width: $mobile-md) {
+  .wrapper {
+    max-width: $mobile-md;
+    margin:  0 ($spacing-unit * 0.75);
+  }
+}
